Added and tested the cart system

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .products {
+	background-image: url("public/images/backgroung.jpg");
 	table{
 		border-collapse: collapse;
 	}
