--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,7 +15,7 @@
       <%= link_to 'Show', product %><br/>
       <%= link_to 'Edit', edit_product_path(product) %><br/>
       <%= link_to 'Destroy', product, method: :delete,
-      data: { confirm: 'Are you sure?' } %>
+      data: { confirm: 'ARE you sure?' } %>
     </td>
   </tr>
   <% end %>
